# ML-PRO__Deep-Learning

./: .gitignore  README.md  main.py  pyproject.toml  utilities.py
perceptron/: dataset.py  neuron.py
