[project]
name = "ml-pro-deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.7.2",
    "torch>=2.12.1",
]
